--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
-remote_theme: jekyll/minimal
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+  - jekyll-remote-theme
 style: "/assets/css/style.css"
