--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,11 @@
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-  - jekyll-remote-theme
+# Very basic HTML
+# remote_theme: pages-themes/minimal@v0.2.0
+# plugins:
+#   - jekyll-remote-theme
+
+remote_theme: pages-themes/cayman@v0.2.0
+# remote_theme: pages-themes/slate@v0.2.0
+# remote_theme: pages-themes/modernist@v0.2.0
+# remote_theme: pages-themes/leap-day@v0.2.0
+
 style: "/assets/css/style.css"
