--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,29 @@
-# Very basic HTML
-# remote_theme: pages-themes/minimal@v0.2.0
+# # Very basic HTML
+# # remote_theme: pages-themes/minimal@v0.2.0
+# # plugins:
+# #   - jekyll-remote-theme
+
+# # remote_theme: pages-themes/cayman@v0.2.0
+# # # remote_theme: pages-themes/slate@v0.2.0
+# # # remote_theme: pages-themes/modernist@v0.2.0
+# # # remote_theme: pages-themes/leap-day@v0.2.0
+
+# # style: "/assets/css/style.css"
+# # include: ["assets/css/custom.css"]
+
+# # --------------------------------------------------
+# # Apply the Cayman theme
+# remote_theme: pages-themes/cayman@v0.2.0
+
+# # Enable Jekyll plugins (required for remote themes)
 # plugins:
 #   - jekyll-remote-theme
 
-# remote_theme: pages-themes/cayman@v0.2.0
-# # remote_theme: pages-themes/slate@v0.2.0
-# # remote_theme: pages-themes/modernist@v0.2.0
-# # remote_theme: pages-themes/leap-day@v0.2.0
+remote_theme: pages-themes/slate@v0.2.0  # (or try 'cayman' for a lighter look)
 
-# style: "/assets/css/style.css"
-# include: ["assets/css/custom.css"]
-
-# --------------------------------------------------
-# Apply the Cayman theme
-remote_theme: pages-themes/cayman@v0.2.0
-
-# Enable Jekyll plugins (required for remote themes)
 plugins:
   - jekyll-remote-theme
+  - jekyll-seo-tag
+
+title: "Gurpreet Kaur | Data Science Portfolio"
+description: "Showcasing my best data science and machine learning projects."
